<resources>
    <string name="app_name">Homestay_management_system</string>
    <string name="pass">通行令牌</string>
    <string name="temp">防疫大使</string>
    <string name="information">即時限動</string>
    <string name="roomservice">客房服務</string>
    <string name="search">旅宿快搜</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="會員管理">會員管理</string>
    <string name="聯絡我們">聯絡我們</string>
    <string name="品牌故事">品牌故事</string>
    <string name="官方社群">官方社群</string>
    <string name="客服中心">客服中心</string>
    <string name="問題類別">問題類別</string>
    <string name="問題項目">問題項目</string>
    <string name="問題內容">問題內容</string>
    <string name="輸入內容">輸入內容</string>
    <string name="回饋單內容">系統人員會盡快依序處理，並回傳訊息告知使用者。</string>
    <string name="網網相戀">網網相戀</string>
    <string name="特色旅宿">特色旅宿</string>
    <string name="觀光遊憩">觀光遊憩</string>
    <string name="交通導引">交通導引</string>
    <string name="有料旅宿">有料旅宿</string>
    <string name="確實旅宿">確實旅宿</string>
    <string name="奧利旅宿">奧利旅宿</string>
    <string name="宜蘭國際童玩藝術節">宜蘭國際童玩藝術節</string>
    <string name="台灣國際熱氣球嘉年華">台灣國際熱氣球嘉年華</string>
    <string name="阿里山四季茶旅活動">阿里山四季茶旅活動</string>
    <string name="國道3號">途經國道3號和阿里山公路/台18縣 開車:2小時46分</string>
    <string name="在地精選">在地精選</string>
    <string name="老饕食坊">老饕食坊</string>
    <string name="套裝行程">套裝行程</string>
    <string name="季節限定">季節限定</string>
    <string name="吳家鵝肉當歸鴨">吳家鵝肉當歸鴨</string>
    <string name="粥堂紅蟳粥">粥堂紅蟳粥</string>
    <string name="吳家鵝肉介紹">已經開了40年了，一家店要開到40年，真的很不容易像我們家小時候就是開小吃店的，做吃的真的很辛苦，更何況是路邊攤，夏天沒冷氣，冬天沒暖氣，還有出攤、收攤都非常辛苦，再來就是要得到客戶不斷的支持，這樣才能一開就是四十年。</string>
    <string name="老饕地點">地點:台中昌平路在台中北屯區</string>
    <string name="老饕紅蟳粥地址">地址： 408台中市南屯區文心路一段412號</string>
    <string name="老饕營業時間">營業時間：22:00</string>
    <string name="老饕電話">電話： 0977427005</string>
    <string name="武陵農場">武陵農場</string>
    <string name="清水趙家古厝">清水趙家古厝</string>
    <string name="南勢溪湧泉">南勢溪湧泉</string>
    <string name="武陵內容">農場園區蘊藏豐富的動植物資源、歷史文物以及七家文化遺址，相關設施規劃完善，包含北谷農業景觀區、中北谷景觀林帶、原野遊憩及高山植物生態園區等，另外有設置露營區、旅館、步道及涼亭，提供旅客食宿、眺望山嵐、吸收清新空氣的休憩空間。</string>
    <string name="武陵地點">地點:台中市北橫公路宜蘭支線53公里處，海拔高度1,740至2,599公尺之間</string>
    <string name="清水趙家地點">地點:清水區的趙家古厝「天水堂」</string>
    <string name="清水趙家內容">半月池每年夏季期間5至8月荷花陸續綻放，美麗的荷花田，伴隨著青山、綠田、古厝，構成了一幅優美的田園風情山水畫，吸引了許多遊客及攝影愛好者前往取景。</string>
    <string name="南勢溪湧泉地點">地點:南勢溪是一條湧泉溪，也是沙鹿地區的「母親之河」</string>
    <string name="南勢溪湧泉內容">南勢坑溪位於大肚山西側，其水源來自沙鹿的天然湧泉，從4000年前便有人類活動遺跡，這份終年供水穩定的水資源便非常重要，臺中地區在冬季及春季幾乎沒有天然降雨，沙鹿區的居民食用、飲用、洗衣、清潔、灌溉等用途，皆仰賴南勢坑溪的水源。</string>
    <string name="薰衣草森林">薰衣草森林</string>
    <string name="新社花海">新社花海</string>
    <string name="薰衣草森林內容">我們希望來這裡的客人都可以感受到，生活中難得的寧靜與在寧靜後身、心、靈的滿足感與豐厚的踏實，在薰衣草森林您可以隨興的看看書、 聊聊天，或者坐在樹下聽風的聲音，用全身的每個感官去感受自然環境的變化。</string>
    <string name="薰衣草森林地點">地點:台灣台中市新社區中興街20號</string>
    <string name="新社花海內容">每年11月~12月舉辦新社花海，歡迎民眾前往享受花香。花海中心種植各類波斯菊品種，賞花步道廣設其中，但卻不破壞大區塊美感，呈現數大便是美的境界；圍繞著花海的外圍區域輔以種植植株較高的向日葵及太陽麻等，讓遊客尚未進入花海區時，即能於外圍或停車場區看見整片艷麗景緻。</string>
    <string name="新社花海地點">地點:台中市新社區協興街30號</string>
    <string name="客房服務">客房服務</string>
    <string name="清潔管家">清潔管家</string>
    <string name="食在方便">食在方便</string>
    <string name="來訪扣凹">來訪扣凹</string>
    <string name="接駁小巴">接駁小巴</string>
    <string name="送出房號">送出房號</string>
    <string name="房間號碼">房間號碼</string>
    <string name="呼叫車子">呼叫車子</string>
    <string name="送出申請">送出申請</string>
    <string name="進出紀錄">進出紀錄</string>
    <string name="選擇餐點">選擇餐點</string>
    <string name="送出成功">送出成功</string>
    <string name="清潔紀錄">清潔紀錄</string>
    <string name="叫車紀錄">叫車紀錄</string>
    <string name="訂餐紀錄">訂餐紀錄</string>
    <string name="個人資料">個人資料</string>
    <string name="查詢紀錄">查詢紀錄</string>
    <string name="即時限動">即時限動</string>
    <string name="近期夥伴">近期夥伴</string>
    <string name="獨家優惠">獨家優惠</string>
    <string name="衛教資訊">衛教資訊</string>
    <string name="政策專區">政策專區</string>
    <string name="有料股份有限公司">有料股份有限公司</string>
    <string name="確實股份有限公司">確實股份有限公司</string>
    <string name="奧利給股份有限公司">奧利給股份有限公司</string>
    <string name="暈車藥">暈車藥</string>
    <string name="文章標題">文章標題</string>
    <string name="張貼日期">張貼日期</string>
    <string name="正確使用止痛藥">正確使用止痛藥</string>
    <string name="個人資料保護法">個人資料保護法</string>
    <string name="個人資料保護法施行細則">個人資料保護法施行細則</string>
    <string name="法規類別">法規類別:行政>國家發展</string>
    <string name="客房Top10">客房Top10</string>
    <string name="訂房紀錄">訂房紀錄</string>
    <string name="線上預訂">線上預訂</string>
    <string name="館內導覽">館內導覽</string>
    <string name="門前侍衛">門前侍衛</string>
    <string name="房務事務">房務事務</string>
    <string name="娛樂侍衛">娛樂侍衛</string>
    <string name="通行令牌">通行令牌</string>
    <string name="產生QRcode">產生QR code</string>
    <string name="加入我們">加入我們</string>
    <string name="同業聯盟">同業聯盟</string>
    <string name="異業合作">異業合作</string>
    <string name="進駐辦法">進駐辦法</string>
    <string name="台中担仔麵">台中担仔麵</string>
    <string name="藝術節路線">沿國道一號、國道三號和國道五號前往五結鄉的191縣道。從國道五號的47羅東號出口下交流道 開車:2小時25分</string>
    <string name="熱氣球路線">沿屏鵝公路/縱貫公路/台1線、台9線和花東縱谷公路前往鹿野鄉高台路42巷 開車:4小時45分</string>
    <string name="個人資料保護法敘述">解釋:資料之紀錄、儲存、更正、複製、刪除</string>
    <string name="旅宿快搜">旅宿快搜</string>
    <string name="防疫大使">防疫大使</string>
    <string name="防疫要項">防疫要項</string>
    <string name="防疫淨化">防疫淨化</string>
    <string name="體溫回報">體溫回報</string>

</resources>