<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".callus_official"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-56dp"
            tools:layout_editor_absoluteY="114dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtBackEnv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/leftarrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:text="@string/同業聯盟"
                    android:textColor="#000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/peers"
                    android:translationX="20dp"
                    android:translationY="10dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/有料旅宿"
                android:textSize="45dp"
                android:gravity="center"
                android:fontFamily="@font/notosansbold"
                android:textColor="#ff0000"/>
            <TextView
                android:id="@+id/tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/確實旅宿"
                android:textSize="45dp"
                android:gravity="center"
                android:fontFamily="@font/notosansbold"
                android:textColor="#ff0000"/>
            <TextView
                android:id="@+id/tv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="45dp"
                android:text="@string/奧利旅宿"
                android:gravity="center"
                android:fontFamily="@font/notosansbold"
                android:textColor="#ff0000"/>
            <TextView
                android:id="@+id/tv_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="45dp"
                android:gravity="center"
                android:fontFamily="@font/notosansbold"
                android:textColor="#ff0000"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>