<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallusFragment"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-56dp"
            tools:layout_editor_absoluteY="114dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtBackEnv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"

                    android:background="@drawable/leftarrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"

                    android:gravity="center"
                    android:text="@string/客房服務"
                    android:textColor="#000"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:id="@+id/clear"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/清潔管家"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/food"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/食在方便"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/callout"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/來訪扣凹"
                android:layout_marginBottom="50dp"/>
            <Button
                android:id="@+id/bus"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/接駁小巴"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:translationX="20dp"
            android:translationY="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clean"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:translationX="20dp"
            android:translationY="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/foodtwo"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:translationX="20dp"
            android:translationY="410dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/callout"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:translationX="20dp"
            android:translationY="540dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bus"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>


