<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallusFragment"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-56dp"
            tools:layout_editor_absoluteY="114dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtBackEnv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"

                    android:background="@drawable/leftarrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"

                    android:gravity="center"
                    android:text="@string/通行令牌"
                    android:textColor="#000"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:id="@+id/tour"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/館內導覽"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/door"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/門前侍衛"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/housekeeping"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/房務事務"
                android:layout_marginBottom="50dp"/>
            <Button
                android:id="@+id/entertainment"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rectangle_callus"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/娛樂侍衛"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:translationX="30dp"
            android:translationY="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tour"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:translationX="30dp"
            android:translationY="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/door"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:translationX="30dp"
            android:translationY="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/access_control"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:translationX="30dp"
            android:translationY="550dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/entertainment"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>


